# cebolaoloterias_web

./: .env.example  INSTALL_TESTS.md  README.md  clean.bat  index.html  install_docker.bat  package-lock.json  package.json  restore.bat  run_backend.bat  run_frontend.bat  setup_dev.bat  start_infra.bat  tailwind.config.ts  tsconfig.app.json  vitest.config.ts
backend/: .env.example  .gitignore  Dockerfile  README.md  SETUP_JWT_BLACKLIST.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/apps/: __init__.py
backend/apps/accounts/: __init__.py  apps.py
backend/apps/generator/: __init__.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/generator/engine/: __init__.py  core.py  validators.py
backend/apps/generator/migrations/: 0001_initial.py  __init__.py
backend/apps/lotteries/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/apps/lotteries/clients/: __init__.py  caixa.py
backend/apps/lotteries/fixtures/: initial_lotteries.json
backend/apps/lotteries/migrations/: 0001_initial.py  0002_alter_lottery_max_number.py  __init__.py
backend/apps/stats/: __init__.py  apps.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/apps/tickets/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/core/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/core/settings/: __init__.py  base.py  dev.py  prod.py
backend/tests/: __init__.py  conftest.py  test_setup.py
docs/: diagrams.md
(+76 files in other folders)
